power: changed stateHistory implementation from arraylist to linkedlist